Feat: added 'closeConstitute' function to Powers.sol

--- a/documentation/powers/docs/pages/for-developers/powers.mdx
+++ b/documentation/powers/docs/pages/for-developers/powers.mdx
@@ -123,5 +123,5 @@ See [the github repo here](https://github.com/7Cedars/powers/blob/main/solidity/
 - `Deposit`: Tracks a deposit's amount and block number.
 
 ### Events
-- **Governance**: `ActionRequested`, `ActionExecuted`, `ProposedActionCreated`, `ProposedActionCancelled`, `VoteCast`
+- **Governance**: `ActionRequested`, `ActionFulfilled`, `ProposedActionCreated`, `ProposedActionCancelled`, `VoteCast`
 - **Admin**: `RoleSet`, `RoleLabel`, `MandateAdopted`, `MandateRevoked`
